Opened 9 years ago
Closed 9 years ago
#1399 closed defect (fixed)
ffmpeg fails to compile with bintext demuxer disabled and either xbin, adf or idf demuxers enabled
Reported by: | jamal | Owned by: | |
---|---|---|---|
Priority: | normal | Component: | avformat |
Version: | git-master | Keywords: | bintext xbin adf idf |
Cc: | Blocked By: | ||
Blocking: | Reproduced by developer: | yes | |
Analyzed by developer: | no |
Description
The following configurations fail:
./configure --disable-everything --enable-demuxer=xbin ./configure --disable-everything --enable-demuxer=adf ./configure --disable-everything --enable-demuxer=idf
All giving the same error, save for the "In function" line which varies depending on which of those three demuxer is enabled:
CC libavformat/bintext.o libavformat/bintext.c: In function 'xbin_read_header': libavformat/bintext.c:193:5: error: implicit declaration of function 'init_stream' [-Werror=implicit-function-declaration] libavformat/bintext.c:193:20: warning: initialization makes pointer from integer without a cast [enabled by default] cc1.exe: some warnings being treated as errors
The problem is that the function init_stream() is inside an #if directive that needs the bintext demuxer enabled in order to be compiled.
Said function should be outside that #if directive since it's needed by all four demuxers.
For the record, i wanted to mention that i found this problem purely by chance thanks to the --enable-random feature added to git-master a few hours ago.
Change History (1)
comment:1 Changed 9 years ago by cehoyos
- Keywords demuxer removed
- Reproduced by developer set
- Resolution set to fixed
- Status changed from new to closed
Note: See
TracTickets for help on using
tickets.
Credits for --enable-random go to Måns.
Should be fixed in my next push, thank you for the report!