Unconditionally compile init_stream() in bintext.

Fixes compilation of xbin, adf and idf demuxer if
bintext demuxer was disabled.

Fixes ticket #1399